--- a/statics/css/ranking.css
+++ b/statics/css/ranking.css
@@ -116,12 +116,14 @@
           position: fixed;
           top: 0; left: 0;
           width: 100%; height: 100%;
-          background: #fff;
+          /* background: #fff; */
           display: flex;
           flex-direction: column;
           justify-content: center;
           align-items: center;
           z-index: 9999;
+          /* 🔽 【修正点】背景色を不透明な白 (RGB: 255, 255, 255) から半透明な白 (アルファ値: 0.8) に変更 */
+          background-color: rgba(255, 255, 255, 0.8); 
         }
 
         /* シンプルなスピナー */
